--- a/code/eda_round2_data.ipynb
+++ b/code/eda_round2_data.ipynb
@@ -1,6 +1,55 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f5a3ccae-37e0-4c6a-a5a1-9522d5da51ab",
+   "metadata": {},
+   "source": [
+    "# 复赛数据\n",
+    "在给出若干日内来自某成熟国家xx的部分用户的点击购买数据，以及来自某待成熟国家yy和待成熟国家zz的A部分用户的点击购买数据，以及国家yy和zz的B部分用户的截止最后一条购买数据之前的所有点击购买数据，让参赛人预测B部分用户的最后一条购买数据。\n",
+    "\n",
+    "商品属性表: 商品的类目id、店铺id以及加密价格，其中价格的加密函数f(x)为一个单调增函数。\n",
+    "训练数据: 给出xx国的用户的点击、购买数据和yy国、zz国的A部分用户的点击、购买数据。\n",
+    "测试数据: 给出yy国、zz国的B部分用户的最后一条购买数据之前的点击购买数据.\n",
+    "\n",
+    "训练数据和测试数据的数据结构是一样的，其中各字段含义如下：\n",
+    "country_id: 买家国家id, 只有'xx','yy','zz'三种取值\n",
+    "buyer_admin_id: 买家id\n",
+    "item_id: 商品id\n",
+    "log_time: 商品详情页访问时间\n",
+    "irank: 每个买家对应的所有记录按照时间顺序的逆排序\n",
+    "buy_flag: 当日是否购买\n",
+    "\n",
+    "数据集特点：\n",
+    "每个用户有若干条点击数据和至少1条购买数据 （但测试数据中该条购买记录可能未给出到选手）\n",
+    "每个用户的最后一条数据的buy_flag一定为1 （但测试数据中该条数据未给出到选手）\n",
+    "测试数据中每个用户的最后一条点击数据（也是购买数据）所对应的商品一定在训练数据中出现过.\n",
+    "可能存在少量跨国买家.\n",
+    "\n",
+    "要求选手提交的数据\n",
+    "关于yy国、zz国的B部分用户每个用户的最后一条购买数据的预测Top30\n",
+    "\n",
+    "提交说明：\n",
+    "选手提交的CSV文件, 其格式应如下：\n",
+    "buyer_admin_id,predict 1,predict 2,…,predict 30\n",
+    "其中buyer_admin_id为买家id, predict 1 ,…, predict 30 为预测用户购买商品Top30的item_id依概率从高到低排序，不含表头，例如：\n",
+    "\n",
+    "1233434,4354,23432,6546,...,91343\n",
+    "\n",
+    "2132133,154,20987,34349,...,78772\n",
+    "\n",
+    "\n",
+    "\n",
+    "评估方法：\n",
+    "MRR(Mean Reciprocal Rank)： 首先对选手提交的表格中的每个用户计算用户得分\n",
+    "$$\n",
+    "score\\left(buyer\\right) = \\sum_{k=1}^{30}\\frac{s\\left(buyer,k\\right)}{k}\n",
+    "$$\n",
+    "\n",
+    "其中, 如果选手对该buyer的预测结果predict k命中该buyer的最后一条购买数据则$s\\left(buyer,k\\right)=1$; 否则$s\\left(buyer,k\\right)=0$. 最终得分为所有这些buyer的平均值。\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c2f67c76-44f1-4e44-9969-54a3b699b283",
@@ -388,8 +437,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dd0b822e-24c8-42b9-aafe-950868422fc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1]), array([0, 1]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[\"buy_flag\"].unique(), test[\"buy_flag\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9c7588eb-6442-40d6-b448-eb59f7bdd627",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country_id        False\n",
+       "buyer_admin_id    False\n",
+       "item_id           False\n",
+       "log_time          False\n",
+       "irank             False\n",
+       "buy_flag          False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "26fe7347-eb97-4da5-895e-0a9c574b8e42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country_id        False\n",
+       "buyer_admin_id    False\n",
+       "item_id           False\n",
+       "log_time          False\n",
+       "irank             False\n",
+       "buy_flag          False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "11a1b72d-a8b7-4d89-bd05-2e9c9c74add1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.groupby(\"buyer_admin_id\").size().min(), test.groupby(\"buyer_admin_id\").size().min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "332f5752-fd05-46b5-94c2-2bd51f611717",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(264473, 39847)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.groupby(\"buyer_admin_id\").size().max(), test.groupby(\"buyer_admin_id\").size().max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b410067f-b389-43f3-afce-ebb0ce206331",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    624804\n",
+       "Name: country_id, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([train, test]).groupby(\"buyer_admin_id\")[\"country_id\"].nunique().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b8018b0-de13-4b21-a53c-664fe964b92a",
    "metadata": {},
    "outputs": [],
    "source": []
