--- a/code/eda_round2_data.ipynb
+++ b/code/eda_round2_data.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1640d845-4d35-4a3f-a384-029019ee1ea7",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "aaf49bbe-f632-4fc2-a6e2-d37cadc1b826",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4         xx               1     7554  2018-04-19 11:28:34     46         0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f8a73b16-a7d9-4c32-981d-029f23cdac83",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "4         zz             186  2137602  2018-04-16 04:57:36     47         0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "bda15acd-553f-4125-b957-21e0613a0913",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "('2018-04-16 00:00:00', '2018-04-30 23:59:00')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e15fcbaa-de10-415e-b6cd-2e01f222a459",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "('2018-04-16 00:00:05', '2018-04-30 23:52:06')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "2b6b0a16-d297-403e-9b7b-d74c9894f3a8",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "(array(['xx', 'zz', 'yy'], dtype=object), array(['zz', 'yy'], dtype=object))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "d17ca433-d7c6-4aec-be8e-b6dc63186ab5",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "(1, 2)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "1c97e6fb-8563-4ed1-8b95-5d667f3f68be",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        "(614960, 9844)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "0de05773-1fe5-4d5c-b222-6d2a77c411c7",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "(264473, 39848)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "dd0b822e-24c8-42b9-aafe-950868422fc8",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
        "(array([0, 1]), array([0, 1]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "9c7588eb-6442-40d6-b448-eb59f7bdd627",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "26fe7347-eb97-4da5-895e-0a9c574b8e42",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "11a1b72d-a8b7-4d89-bd05-2e9c9c74add1",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "(1, 1)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "332f5752-fd05-46b5-94c2-2bd51f611717",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "(264473, 39847)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "b410067f-b389-43f3-afce-ebb0ce206331",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
        "Name: country_id, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,8 +576,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4b8018b0-de13-4b21-a53c-664fe964b92a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([train.assign(is_train=1), test.assign(is_train=0)])\n",
+    "\n",
+    "df['log_time'] = pd.to_datetime(df['log_time'])\n",
+    "df['date'] = df['log_time'].dt.date\n",
+    "df['day'] = df['log_time'].dt.day\n",
+    "df['hour'] = df['log_time'].dt.hour\n",
+    "\n",
+    "df = pd.merge(df, item, how='left', on='item_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7507978d-7e90-4158-a2d9-e478aae31c0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>buyer_admin_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>log_time</th>\n",
+       "      <th>irank</th>\n",
+       "      <th>buy_flag</th>\n",
+       "      <th>is_train</th>\n",
+       "      <th>date</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>cate_id</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7554</td>\n",
+       "      <td>2018-04-19 10:59:56</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>2067.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7937</td>\n",
+       "      <td>2018-04-19 11:17:45</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9541.0</td>\n",
+       "      <td>1865.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7544</td>\n",
+       "      <td>2018-04-18 22:19:30</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>1604.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7559</td>\n",
+       "      <td>2018-04-18 22:15:27</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>2067.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7554</td>\n",
+       "      <td>2018-04-19 11:28:34</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>2067.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country_id  buyer_admin_id  item_id            log_time  irank  buy_flag  \\\n",
+       "0         xx               1     7554 2018-04-19 10:59:56     79         0   \n",
+       "1         xx               1     7937 2018-04-19 11:17:45     62         0   \n",
+       "2         xx               1     7544 2018-04-18 22:19:30     81         0   \n",
+       "3         xx               1     7559 2018-04-18 22:15:27     82         0   \n",
+       "4         xx               1     7554 2018-04-19 11:28:34     46         0   \n",
+       "\n",
+       "   is_train        date  day  hour  cate_id  store_id  item_price  \n",
+       "0         1  2018-04-19   19    10   1467.0    9682.0      2067.0  \n",
+       "1         1  2018-04-19   19    11   1467.0    9541.0      1865.0  \n",
+       "2         1  2018-04-18   18    22   1467.0    9682.0      1604.0  \n",
+       "3         1  2018-04-18   18    22   1467.0    9682.0      2067.0  \n",
+       "4         1  2018-04-19   19    11   1467.0    9682.0      2067.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "41effb30-0408-4b22-89f8-e7d9f5c7feba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before memory usage of properties dataframe is : 5631.612686157227  MB\n",
+      "After memory usage of properties dataframe is : 3469.475672721863  MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "memory = df.memory_usage().sum() / 1024**2 \n",
+    "print('Before memory usage of properties dataframe is :', memory, \" MB\")\n",
+    "\n",
+    "dtype_dict = {'buyer_admin_id' : 'int32', \n",
+    "              'item_id' : 'int32', \n",
+    "              'store_id' : pd.Int32Dtype(),\n",
+    "              'irank' : 'int16',\n",
+    "              'item_price' : float,\n",
+    "              'cate_id' : pd.Int16Dtype(),\n",
+    "              'is_train' : 'int8',\n",
+    "              'day' : 'int8',\n",
+    "              'hour' : 'int8',\n",
+    "              'country_id': str,\n",
+    "              'date': str\n",
+    "             }\n",
+    "\n",
+    "df = df.astype(dtype_dict)\n",
+    "memory = df.memory_usage().sum() / 1024**2 \n",
+    "print('After memory usage of properties dataframe is :', memory, \" MB\")\n",
+    "del train, test; "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5c9594ee-a136-41fc-98eb-99adb0af67b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country_id        False\n",
+       "buyer_admin_id    False\n",
+       "item_id           False\n",
+       "log_time          False\n",
+       "irank             False\n",
+       "buy_flag          False\n",
+       "is_train          False\n",
+       "date              False\n",
+       "day               False\n",
+       "hour              False\n",
+       "cate_id            True\n",
+       "store_id           True\n",
+       "item_price         True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "68bd162a-d4cd-4353-8755-1bb4e287225f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "store_id      1.0\n",
+       "item_price    1.0\n",
+       "cate_id       1.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['store_id', 'item_price', 'cate_id']].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9f62304e-2d62-4708-99ae-a184c621207a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in ['store_id', 'item_price', 'cate_id']:\n",
+    "    df[col] = df[col].fillna(0).astype(np.int32).replace(0, np.nan)\n",
+    "# df.to_hdf('../data/train_test_round2.h5', key='df', mode='w')\n",
+    "# del df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "62d8f7b8-9413-4880-9baf-24f25ec74f76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.61 s, sys: 13.8 s, total: 19.4 s\n",
+      "Wall time: 1min 8s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %%time\n",
+    "# df = pd.read_hdf('../data/train_test_round2.h5', key='df')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "04424550-e84e-40a8-a1c5-33cebab28095",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# del df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "654762bb-22c5-470f-a176-e678b5d60d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 23.9 s, sys: 11.7 s, total: 35.6 s\n",
+      "Wall time: 42 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %%time\n",
+    "# train = pd.read_csv('../data/Antai_AE/Antai_AE_round2_train_20190813.csv')\n",
+    "# test = pd.read_csv('../data/Antai_AE/Antai_AE_round2_test_20190813.csv')\n",
+    "# item = pd.read_csv('../data/Antai_AE/Antai_AE_round2_item_attr_20190813.csv')\n",
+    "# del train, test;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bc05947-3d73-4ff4-9719-895c2660405d",
+   "metadata": {},
+   "source": [
+    "# data content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e515e58-92d5-47cb-ab6f-8195493fb9aa",
    "metadata": {},
    "outputs": [],
    "source": []
