--- a/code/eda_round2_data.ipynb
+++ b/code/eda_round2_data.ipynb
@@ -857,16 +857,7 @@
    "execution_count": 24,
    "id": "62d8f7b8-9413-4880-9baf-24f25ec74f76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 5.61 s, sys: 13.8 s, total: 19.4 s\n",
-      "Wall time: 1min 8s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%time\n",
     "# df = pd.read_hdf('../data/train_test_round2.h5', key='df')"
@@ -884,19 +875,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "654762bb-22c5-470f-a176-e678b5d60d3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 23.9 s, sys: 11.7 s, total: 35.6 s\n",
-      "Wall time: 42 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%time\n",
     "# train = pd.read_csv('../data/Antai_AE/Antai_AE_round2_train_20190813.csv')\n",
@@ -915,8 +897,416 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "3e515e58-92d5-47cb-ab6f-8195493fb9aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_id</th>\n",
+       "      <th>buyer_admin_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>log_time</th>\n",
+       "      <th>irank</th>\n",
+       "      <th>buy_flag</th>\n",
+       "      <th>is_train</th>\n",
+       "      <th>date</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>cate_id</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7554</td>\n",
+       "      <td>2018-04-19 10:59:56</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>2067.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7937</td>\n",
+       "      <td>2018-04-19 11:17:45</td>\n",
+       "      <td>62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9541.0</td>\n",
+       "      <td>1865.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7544</td>\n",
+       "      <td>2018-04-18 22:19:30</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>1604.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7559</td>\n",
+       "      <td>2018-04-18 22:15:27</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>2067.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>xx</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7554</td>\n",
+       "      <td>2018-04-19 11:28:34</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018-04-19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>9682.0</td>\n",
+       "      <td>2067.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country_id  buyer_admin_id  item_id            log_time  irank  buy_flag  \\\n",
+       "0         xx               1     7554 2018-04-19 10:59:56     79         0   \n",
+       "1         xx               1     7937 2018-04-19 11:17:45     62         0   \n",
+       "2         xx               1     7544 2018-04-18 22:19:30     81         0   \n",
+       "3         xx               1     7559 2018-04-18 22:15:27     82         0   \n",
+       "4         xx               1     7554 2018-04-19 11:28:34     46         0   \n",
+       "\n",
+       "   is_train        date  day  hour  cate_id  store_id  item_price  \n",
+       "0         1  2018-04-19   19    10   1467.0    9682.0      2067.0  \n",
+       "1         1  2018-04-19   19    11   1467.0    9541.0      1865.0  \n",
+       "2         1  2018-04-18   18    22   1467.0    9682.0      1604.0  \n",
+       "3         1  2018-04-18   18    22   1467.0    9682.0      2067.0  \n",
+       "4         1  2018-04-19   19    11   1467.0    9682.0      2067.0  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "12ea29cb-cde9-4fcc-adee-b32bfc6dad6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country_id            0\n",
+       "buyer_admin_id        0\n",
+       "item_id               0\n",
+       "log_time              0\n",
+       "irank                 0\n",
+       "buy_flag              0\n",
+       "is_train              0\n",
+       "date                  0\n",
+       "day                   0\n",
+       "hour                  0\n",
+       "cate_id           95958\n",
+       "store_id          95958\n",
+       "item_price        95958\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7023f1a8-7c1d-48df-9af2-e70f6f951fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>buyer_admin_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>irank</th>\n",
+       "      <th>buy_flag</th>\n",
+       "      <th>is_train</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>cate_id</th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.272477e+07</td>\n",
+       "      <td>5.272477e+07</td>\n",
+       "      <td>5.272477e+07</td>\n",
+       "      <td>5.272477e+07</td>\n",
+       "      <td>5.272477e+07</td>\n",
+       "      <td>5.272477e+07</td>\n",
+       "      <td>5.272477e+07</td>\n",
+       "      <td>5.262881e+07</td>\n",
+       "      <td>5.262881e+07</td>\n",
+       "      <td>5.262881e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.114219e+05</td>\n",
+       "      <td>4.333457e+06</td>\n",
+       "      <td>2.557213e+02</td>\n",
+       "      <td>1.631748e-01</td>\n",
+       "      <td>9.838060e-01</td>\n",
+       "      <td>2.164609e+01</td>\n",
+       "      <td>9.267078e+00</td>\n",
+       "      <td>1.681968e+03</td>\n",
+       "      <td>5.593719e+04</td>\n",
+       "      <td>2.718526e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.844761e+05</td>\n",
+       "      <td>2.532043e+06</td>\n",
+       "      <td>3.213240e+03</td>\n",
+       "      <td>3.695250e-01</td>\n",
+       "      <td>1.262211e-01</td>\n",
+       "      <td>3.961407e+00</td>\n",
+       "      <td>6.221378e+00</td>\n",
+       "      <td>1.058869e+03</td>\n",
+       "      <td>3.105546e+04</td>\n",
+       "      <td>6.205391e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>-3.276800e+04</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.600000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.467390e+05</td>\n",
+       "      <td>2.166051e+06</td>\n",
+       "      <td>2.200000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.800000e+01</td>\n",
+       "      <td>4.000000e+00</td>\n",
+       "      <td>7.440000e+02</td>\n",
+       "      <td>3.028800e+04</td>\n",
+       "      <td>2.950000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.128890e+05</td>\n",
+       "      <td>4.211300e+06</td>\n",
+       "      <td>5.600000e+01</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>2.100000e+01</td>\n",
+       "      <td>9.000000e+00</td>\n",
+       "      <td>1.769000e+03</td>\n",
+       "      <td>5.726100e+04</td>\n",
+       "      <td>8.770000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.740970e+05</td>\n",
+       "      <td>6.461643e+06</td>\n",
+       "      <td>1.420000e+02</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>2.500000e+01</td>\n",
+       "      <td>1.300000e+01</td>\n",
+       "      <td>2.307000e+03</td>\n",
+       "      <td>8.125400e+04</td>\n",
+       "      <td>2.301000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.266450e+05</td>\n",
+       "      <td>9.167200e+06</td>\n",
+       "      <td>3.276700e+04</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>3.000000e+01</td>\n",
+       "      <td>2.300000e+01</td>\n",
+       "      <td>4.793000e+03</td>\n",
+       "      <td>1.236170e+05</td>\n",
+       "      <td>5.080600e+04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       buyer_admin_id       item_id         irank      buy_flag      is_train  \\\n",
+       "count    5.272477e+07  5.272477e+07  5.272477e+07  5.272477e+07  5.272477e+07   \n",
+       "mean     3.114219e+05  4.333457e+06  2.557213e+02  1.631748e-01  9.838060e-01   \n",
+       "std      1.844761e+05  2.532043e+06  3.213240e+03  3.695250e-01  1.262211e-01   \n",
+       "min      1.000000e+00  1.000000e+00 -3.276800e+04  0.000000e+00  0.000000e+00   \n",
+       "25%      1.467390e+05  2.166051e+06  2.200000e+01  0.000000e+00  1.000000e+00   \n",
+       "50%      3.128890e+05  4.211300e+06  5.600000e+01  0.000000e+00  1.000000e+00   \n",
+       "75%      4.740970e+05  6.461643e+06  1.420000e+02  0.000000e+00  1.000000e+00   \n",
+       "max      6.266450e+05  9.167200e+06  3.276700e+04  1.000000e+00  1.000000e+00   \n",
+       "\n",
+       "                day          hour       cate_id      store_id    item_price  \n",
+       "count  5.272477e+07  5.272477e+07  5.262881e+07  5.262881e+07  5.262881e+07  \n",
+       "mean   2.164609e+01  9.267078e+00  1.681968e+03  5.593719e+04  2.718526e+03  \n",
+       "std    3.961407e+00  6.221378e+00  1.058869e+03  3.105546e+04  6.205391e+03  \n",
+       "min    1.600000e+01  0.000000e+00  1.000000e+00  1.000000e+00  1.000000e+00  \n",
+       "25%    1.800000e+01  4.000000e+00  7.440000e+02  3.028800e+04  2.950000e+02  \n",
+       "50%    2.100000e+01  9.000000e+00  1.769000e+03  5.726100e+04  8.770000e+02  \n",
+       "75%    2.500000e+01  1.300000e+01  2.307000e+03  8.125400e+04  2.301000e+03  \n",
+       "max    3.000000e+01  2.300000e+01  4.793000e+03  1.236170e+05  5.080600e+04  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "08692f15-99ca-4699-bbad-bc6bb451bcc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-32768"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"irank\"].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "206bda02-36c5-4aab-b494-73e11900b88c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mirank\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39msort_values()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"irank\"].sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d03484cb-a3e5-4a30-ba2c-4c1226265a57",
    "metadata": {},
    "outputs": [],
    "source": []
