--- a/code/eda_round1_data.ipynb
+++ b/code/eda_round1_data.ipynb
@@ -6354,9 +6354,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AntaiCup-VAR0c4pl",
+   "display_name": "AntaiCup-2szAcrRr",
    "language": "python",
-   "name": "antaicup-var0c4pl"
+   "name": "antaicup-2szacrrr"
   },
   "language_info": {
    "codemirror_mode": {
