--- a/code/round2/rank_feature.ipynb
+++ b/code/round2/rank_feature.ipynb
@@ -12,8 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%run round2_base.ipynb"
@@ -21,9 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sample \u001b[38;5;241m=\u001b[39m \u001b[43mget_sample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrank\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m df \u001b[38;5;241m=\u001b[39m get_hdf(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m'\u001b[39m, if_filter_label\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, if_drop_duplicates\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, if_lastday\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/tmp/ipykernel_3533/27435355.py:16\u001b[0m, in \u001b[0;36mget_sample\u001b[0;34m(dtype, data_type)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m sample\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 16\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mget_hdf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mall\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata_type\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m     rebuy_user \u001b[38;5;241m=\u001b[39m get_user(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrebuy\u001b[39m\u001b[38;5;124m'\u001b[39m, data_type)\n\u001b[1;32m     18\u001b[0m     test_user \u001b[38;5;241m=\u001b[39m get_user(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m, data_type)\n",
+      "File \u001b[0;32m/tmp/ipykernel_3533/3533062381.py:24\u001b[0m, in \u001b[0;36mget_hdf\u001b[0;34m(dtype, data_type, if_filter_label, if_lastday, if_drop_duplicates, if_debug, is_train)\u001b[0m\n\u001b[1;32m     22\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m data_type\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m---> 24\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mconcat([pd\u001b[38;5;241m.\u001b[39mread_hdf(path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain-half1\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     25\u001b[0m                     pd\u001b[38;5;241m.\u001b[39mread_hdf(path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain-half2\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     26\u001b[0m                     pd\u001b[38;5;241m.\u001b[39mread_hdf(path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m dtype \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     28\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([pd\u001b[38;5;241m.\u001b[39mread_hdf(path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain-half1\u001b[39m\u001b[38;5;124m'\u001b[39m),\n\u001b[1;32m     29\u001b[0m                     pd\u001b[38;5;241m.\u001b[39mread_hdf(path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain-half2\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sample = get_sample(dtype='rank')\n",
     "df = get_hdf('all', if_filter_label=True, if_drop_duplicates=True, if_lastday=True)"
@@ -1027,9 +1045,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "AntaiCup-2szAcrRr",
    "language": "python",
-   "name": "python3"
+   "name": "antaicup-2szacrrr"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1041,7 +1059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
