--- a/code/round2/round2_base.ipynb
+++ b/code/round2/round2_base.ipynb
@@ -3,10 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import inspect"
+    "import inspect\n",
+    "import os"
    ]
   },
   {
@@ -21,10 +24,10 @@
     "    path = f'../output/{file}'\n",
     "    if os.path.exists(path):\n",
     "        df = pd.read_hdf(path, dtype)\n",
-    "        print('>>> read   ', path, dtype)\n",
+    "        print('>>> read ', path, dtype)\n",
     "        return df\n",
     "    else:\n",
-    "        print('>>> generate   ', path, dtype)"
+    "        print('>>> generate ', path, dtype)"
    ]
   },
   {
@@ -267,6 +270,8 @@
     "    if_debug : debug取前10000行\n",
     "    is_train : 是否只取训练数据\n",
     "    \"\"\"\n",
+    "    import pandas as pd\n",
+    "    \n",
     "    # 基础数据文件\n",
     "    path = '../data/' + data_type\n",
     "    if dtype == 'all':\n",
@@ -419,6 +424,8 @@
     "    \n",
     "    Tips:baseline包含训练集历史有购买用户，rank仅包含训练集复购用户与测试集全量用户\n",
     "    \"\"\"\n",
+    "    import os\n",
+    "    \n",
     "    path = '../data/sample_' + data_type\n",
     "    if os.path.exists(path):\n",
     "        sample = pd.read_hdf(path, dtype).reset_index(drop=True)\n",
@@ -495,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
